--- a/App_Data/schema/config/config.table.users.json
+++ b/App_Data/schema/config/config.table.users.json
@@ -6,7 +6,7 @@
     "links":[
         {
             "foreign_field":"upln_user_id",
-            "child_code":"uplnk",
+            "child_code":"upln",
             "link_type":"1tom"
         }
     ],
@@ -15,11 +15,6 @@
         {"name":"user_id","type":"Int64","keyPosition":0}
     ],
     "captions":{
-        "par_code":"Code",
-        "par_desc":"Description",
-        "par_notes":"Parent Notes",
-        "par_lkp_id_a":"User Parameters",
-        "par_lkp_id_b":"Document Type"
     },
     "tableCode":"users",
     "description":"Users collection table"
