Tested and documented 1to1 link configuratino

--- a/App_Data/schema/config/config.table.plnt.json
+++ b/App_Data/schema/config/config.table.plnt.json
@@ -1,5 +1,5 @@
 {
-    "tableName" : "tbl_Plants",
+    "tableName" : "tbl_PlantData",
     "tableFieldPrefix":"plnt_",
     "tableClassFilename":"",
     "tableClass":"TblPlants",
