fixed GetRowsByGroupId when a row object is supplied. problem was key value is being extracted only from the currentRow which could not be null. since key is already the parent row, key value can be extracted from it.

--- a/App_Data/schema/config/config.table.upln.json
+++ b/App_Data/schema/config/config.table.upln.json
@@ -12,7 +12,8 @@
     ],
     "tableRowClass":"TblUserPlantRow",
     "columns": [
-        {"name":"upln_id","type":"Int64","keyPosition":0}
+        {"name":"upln_id","type":"Int64","keyPosition":0},
+        {"name":"upln_user_id","type":"Int64","groupPosition":0}
     ],
     "captions":{
     },
