--- a/App_Data/schema/config/config.table.plnt.json
+++ b/App_Data/schema/config/config.table.plnt.json
@@ -3,6 +3,7 @@
     "tableFieldPrefix":"plnt_",
     "tableClassFilename":"",
     "tableClass":"TblPlants",
+    "links":[],
     "tableRowClass":"TblPlantsRow",
     "columns": [
         {"name":"plnt_id","type":"Int64","keyPosition":0}
