IMSA Tracking Table Config

--- a/App_Data/schema/config/config.table.chgTrack.json
+++ b/App_Data/schema/config/config.table.chgTrack.json
@@ -11,5 +11,5 @@
     "captions":{
     },
     "tableCode":"chgTrack",
-    "description":"Change tracking collection table"
+    "description":"Change Tracking Collection Table"
 }
