--- a/App_Data/schema/config/config.table.anom.json
+++ b/App_Data/schema/config/config.table.anom.json
@@ -1,12 +1,12 @@
 {
     "tableName" : "tbl_Anomalies",
-    "tableFieldPrefix":"an_",
+    "tableFieldPrefix":"AN_",
     "tableClassFilename":"",
     "tableClass":"TblAnomalies",
     "links":[],
     "tableRowClass":"TblAnomaliesRow",
     "columns": [
-        {"name":"an_id","type":"Int64","keyPosition":0},
+        {"name":"AN_ID","type":"Int64","keyPosition":0},
     ],
     "captions":{
     },
