--- a/App_Data/schema/config/config.table.rf.json
+++ b/App_Data/schema/config/config.table.rf.json
@@ -10,6 +10,7 @@
     "tableRowClass":"TblRefFilesRow",
     "columns": [
         {"name":"RF_ID","type":"Int64","keyPosition":0},
+        {"name":"RF_TYPE","type":"Int64","groupPosition":0},
     ],
     "captions":{
     },
