--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -21,6 +21,11 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+        <webServices>
+            <protocols>
+                <add name="HttpSoap, HttpGet, HttpPost" />
+            </protocols>
+        </webServices>
   </system.web>
   <system.webServer>
     <modules>
@@ -38,11 +43,12 @@
 
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*"/>
-        <add name="Access-Control-Allow-Headers" value="Content-Type"/>
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS"/>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
       </customHeaders>
     </httpProtocol>
+        <urlCompression doStaticCompression="false" doDynamicCompression="false" />
     
   </system.webServer>
   <runtime>
