--- a/app.settings.json
+++ b/app.settings.json
@@ -9,7 +9,7 @@
     "PATH_SCHEMA_CONFIG":"config",
     "PATH_SCHEMA_CLIENT":"client",
     "TPL_TARGET_TYPESCRIPT_IMPORT":"import { <TABLE>, <TABLEROW> } from './app.tables';",
-    "TPL_TARGET_TYPESCRIPT_INSTANCE":"public <TABLEVAR>:<TABLE> = this.AddTable(new <TABLE>(this.http, this.apiUrl, this.tables));",
+    "TPL_TARGET_TYPESCRIPT_INSTANCE":"public <TABLEVAR>:<TABLE> = this.AddTable(new <TABLE>(this.http, this.apiUrl, this.tables, this.apiCommon));",
     "PATH_SCHEMA_TEMPLATES":"templates",
     "PATH_SETTINGS": "App_Data",
     "PATH_TARGET_TYPESCRIPT_FOLDER":"d:\\Users\\alv\\Documents\\Data\\ngp\\TestAPI\\src\\app\\services",
