Completed 1 to 1 data extraction and activate ui menu action

--- a/App_Data/schema/config/config.table.tre.json
+++ b/App_Data/schema/config/config.table.tre.json
@@ -10,7 +10,8 @@
         {"name":"TRE_NOD_TAG_PAR","type":"Int64","groupPosition":0},
     ],
 	"relations":[
-		{"foreign_code":"node", "type":"1to1","local_field":"TRE_DAT_TAG"}
+		{"foreign_code":"node", "type":"1to1","local_field":"TRE_DAT_TAG"},
+		{"foreign_code":"tre", "type":"1tom","foreign_field":"TRE_NOD_TAG_PAR"}
 	],
     "captions":{
     },
