Just created childCount and childFirst properties in tableRow

--- a/App_Data/schema/config/config.table.tre.json
+++ b/App_Data/schema/config/config.table.tre.json
@@ -11,7 +11,7 @@
     ],
 	"relations":[
 		{"foreign_code":"node", "type":"1to1","local_field":"TRE_DAT_TAG"},
-		{"foreign_code":"tre", "type":"1tom","foreign_field":"TRE_NOD_TAG_PAR"}
+		{"foreign_code":"tre", "type":"1tom","foreign_field":"TRE_NOD_TAG_PAR","parent_detail":true}
 	],
     "captions":{
     },
