incorporating tree nodes loading indicator and started working on 1 to many relation to tree nodes and data table

--- a/App_Data/schema/config/config.table.tre.json
+++ b/App_Data/schema/config/config.table.tre.json
@@ -11,7 +11,8 @@
     ],
 	"relations":[
 		{"foreign_code":"node", "type":"1to1","local_field":"TRE_DAT_TAG"},
-		{"foreign_code":"tre", "type":"1tom","foreign_field":"TRE_NOD_TAG_PAR","parent_detail":true}
+		{"foreign_code":"tre", "type":"1tom","foreign_field":"TRE_NOD_TAG_PAR","parent_detail":true},
+		{"foreign_code":"an", "type":"1tom","foreign_field":"AN_ASSET_ID","parent_detail":true}
 	],
     "captions":{
     },
