started lookup management

--- a/App_Data/schema/config/config.table.rf.json
+++ b/App_Data/schema/config/config.table.rf.json
@@ -16,6 +16,7 @@
 		"RF_ID":"ID",
 		"RF_TYPE":"Type",
 		"RF_DESC":"Title",
+		"RF_FILENAME":"Filename",
 		"RF_ASSET":"Asset"
     },
     "tableCode":"rf",
