started with grouped aggregate function ...

--- a/App_Data/schema/config/config.table.node.json
+++ b/App_Data/schema/config/config.table.node.json
@@ -10,6 +10,9 @@
     "columns": [
         {"name":"REC_TAG","type":"Int64","keyPosition":0},
     ],
+	"relations":[
+		{"foreign_code":"an", "type":"1tom","local_field":"REC_TAG","foreign_field":"AN_ASSET_ID","parent_detail":true},
+	],
     "captions":{
     },
     "tableCode":"node",
