After deployment of Alpha 1.2.0 - 20200528

--- a/App_Data/schema/config/config.table.an.json
+++ b/App_Data/schema/config/config.table.an.json
@@ -17,6 +17,11 @@
         {"name":"AN_ID","type":"Int64","keyPosition":0},
     ],
     "captions":{
+		"AN_ID":"ID",
+		"AN_DESC":"Title",
+		"AN_ASSET_ID":"Asset",
+		"AN_ORIG_CLASS":"Orig.Class",
+		"AN_CURR_CLASS":"Curr.Class"
     },
     "tableCode":"an",
     "description":"Anomalies Table"
