--- a/App_Data/schema/config/config.table.desdat.json
+++ b/App_Data/schema/config/config.table.desdat.json
@@ -12,12 +12,11 @@
     "captions":{
 		"DD_ID":"ID",
 		"DD_ASSET":"Asset",
-		"DD_PARAM":"Type",
-		"DD_ID":"Name",
-		"DD_ID":"Value",
-		"DD_ID":"Unit",
-		"DD_ID":"Notes",
-		"DD_ID":"References"
+		"DD_PARAM":"Name",
+		"DD_PARAM_VALUE":"Value",
+		"DD_PARAM_UNIT":"Unit",
+		"DD_PARAM_NOTES":"Notes",
+		"DD_PARAM_REF":"References"
     },
     "tableCode":"desdat",
     "description":"Design Data Collection"
